Switched base64 encoder